--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "bridges-badge-api",
   "version": "0.0.1",
   "description": "All the badge logic for the Wise project",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
+    "start": "nodemon",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +25,7 @@
   },
   "homepage": "https://github.com/Wise-Badges/badge-api#readme",
   "devDependencies": {
+    "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   }
