--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.24"
   }
 }
