--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.9.24"
+    "logger": "0.0.1",
+    "mongoose": "^5.9.24",
+    "morgan": "^1.10.0"
   }
 }
