--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/Wise-Badges/badge-api#readme",
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
