--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "express": "^4.17.1",
     "logger": "0.0.1",
     "mongoose": "^5.9.24",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openbadges-bakery-v2": "^2.1.0"
   }
 }
