--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "async": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "mongoose": "^5.9.24",
     "openbadges-bakery-v2": "^2.1.0"
   }
