--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "@types/mongoose": "^5.7.32",
     "async": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
