--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
+    "filter-anything": "^2.1.4",
     "mongoose": "^5.9.24",
     "openbadges-bakery-v2": "^2.1.0",
     "request": "^2.88.2"
