--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,24 @@
 version: '3'
+  mongo:
+    container_name: mongo
+    image: mongo
+    ports:
+      - '27017:27017'
+     volumes:
+      - mongodb_data_container:/data/app
 services:
   badge-api:
     env_file: .env
     container_name: badge-api
     restart: always
     build: .
+    depends_on:
+      - mongo
     environment:
       - PORT=5000
     ports:
       - '5000:5000'
     links:
       - mongo
-  mongo:
-    container_name: mongo
-    image: mongo
-    ports:
-      - '27017:27017'
+volumes:
+  mongodb_data_container:
