--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express-validator": "^6.6.0",
     "filter-anything": "^2.1.4",
     "mongoose": "^5.9.24",
+    "node-schedule": "^1.3.2",
     "openbadges-bakery-v2": "^2.1.0",
     "request": "^2.88.2"
   }
